[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
replit = "^3.2.4"
Flask = "^2.1.2"
schedule = "^1.1.0"
googletrans = "^3.0.0"
pytube = "12.1.2"
bs4 = "^0.0.1"
telebot = "0.0.5"
youtube_dl = "^2021.12.17"
yt-dlp = "^2023.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"